tag: 0.2.1. Removed old files. Added 2 files.

--- a/4491-h/4491-h.htm
+++ b/4491-h/4491-h.htm
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="us-ascii"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 
 <!DOCTYPE html
    PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
@@ -10,7 +10,7 @@
       Celt and Saxon, by George Meredith
     </title>
     <style type="text/css" xml:space="preserve">
-    
+
     body { margin:5%; background:#faebd7; text-align:justify}
     P { text-indent: 1em; margin-top: .25em; margin-bottom: .25em; }
     H1,H2,H3,H4,H5,H6 { text-align: center; margin-left: 15%; margin-right: 15%; }
@@ -24,7 +24,7 @@
     .figleft   {float: left; margin-left: 0%; margin-right: 1%;}
     .figright  {float: right; margin-right: 0%; margin-left: 1%;}
     pre     { font-style: italic; font-size: 90%; margin-left: 10%;}
-    
+
 </style>
   </head>
   <body>
@@ -45,11 +45,11 @@ Title: The Celt and Saxon, Complete
 Author: George Meredith
 
 Release Date: October 13, 2006 [EBook #4491]
-Last Updated: November 3, 2012
+Last Updated: February 26, 2018
 
 Language: English
 
-Character set encoding: ASCII
+Character set encoding: UTF-8
 
 *** START OF THIS PROJECT GUTENBERG EBOOK THE CELT AND SAXON, COMPLETE ***
 
@@ -63,6 +63,7 @@ Produced by David Widger
 
 
 </pre>
+
     <p>
       <br /> <br />
     </p>
@@ -1355,7 +1356,7 @@ Produced by David Widger
       own country.
     </p>
     <p>
-      'And becoming a Frenchman?'said Caroline.
+      'And becoming a Frenchman?' said Caroline.
     </p>
     <p>
       'Why not?' said he. 'I 'm more at home with French people; they're mostly
@@ -2111,8 +2112,8 @@ Produced by David Widger
       wilfulness.
     </p>
     <p>
-      Patrick put out a finger. 'The eyes there don't seem to say, "I'm yours to
-      make a hero of you." But look,' he drew forth from under his waistcoat the
+      Patrick put out a finger. 'The eyes there don't seem to say, &ldquo;I'm yours to
+      make a hero of you.&rdquo; But look,' he drew forth from under his waistcoat the
       miniature, 'what don't they say here! It's a bright day for the Austrian
       capital that has her by the river Danube. Yours has a landscape; I've made
       acquaintance with the country, I caught the print of it on my ride
@@ -2121,8 +2122,8 @@ Produced by David Widger
       thoughts; that's next to her soul. I've an idea it ought to be given to
       Philip.' He craned his head round to woo some shadow of assent to the
       daring suggestion. 'Just to break the shock 'twill be to my brother, Miss
-      Adister. If I could hand him this, and say, "Keep it, for you'll get
-      nothing more of her; and that's worth a kingdom."'
+      Adister. If I could hand him this, and say, &ldquo;Keep it, for you'll get
+      nothing more of her; and that's worth a kingdom.&rdquo;'
     </p>
     <p>
       Caroline faltered: 'Your brother does not know?'
@@ -2160,8 +2161,8 @@ Produced by David Widger
     </p>
     <p>
       'The one! I had it from her. And how she loves her darling Miss Adiante!
-      She won't hear of "princess." She hates that marriage. She was all for my
-      brother Philip. She calls him "Our handsome lieutenant." She'll keep the
+      She won't hear of &ldquo;princess.&rdquo; She hates that marriage. She was all for my
+      brother Philip. She calls him &ldquo;Our handsome lieutenant.&rdquo; She'll keep the
       poor fellow a subaltern all his life.'
     </p>
     <p>
@@ -3044,9 +3045,9 @@ Produced by David Widger
       relative of hers, or somebody's&mdash;I should say, a century old, but she
       told it with a becoming air of appropriation that made it family history,
       for she's come down in the world, and this fellow had a stain of red upon
-      him, and wanted cleaning; and, "What!" says the good father, "Mika! you
-      did it in cold blood?" And says Mika, "Not I, your Riverence. I got myself
-      into a passion 'fore I let loose." I believe she smoked this identical
+      him, and wanted cleaning; and, &ldquo;What!&rdquo; says the good father, &ldquo;Mika! you
+      did it in cold blood?&rdquo; And says Mika, &ldquo;Not I, your Riverence. I got myself
+      into a passion 'fore I let loose.&rdquo; I believe she smoked this identical
       pipe. She acknowledged the merits of my whisky, as poets do hearing fine
       verses, never clapping hands, but with the expressiveness of grave
       absorption. That's the way to make good things a part of you. She was a
@@ -3395,7 +3396,7 @@ Produced by David Widger
       again; three or four days with Con have stirred me; I don't let him see
       it, but they always do: these tales of starvations and shootings, all the
       old work just as when I left, act on me like a smell of powder. I was
-      dipped in "Ireland for the Irish"; and a contented Irishman scarcely seems
+      dipped in &ldquo;Ireland for the Irish&rdquo;; and a contented Irishman scarcely seems
       my countryman.'
     </p>
     <p>
@@ -3503,7 +3504,7 @@ Produced by David Widger
       mandate from his commanding officer, and they signified action, uncertain
       where. He was the soldier at once, buckled tight and buttoned up over his
       private sentiments. Vienna shot a line to Mrs. Adister O'Donnell. She
-      communicated it:'The Princess Nikolas has a son!' Captain Con tossed his
+      communicated it: 'The Princess Nikolas has a son!' Captain Con tossed his
       newspaper to the floor, crying:
     </p>
     <p>
@@ -3561,7 +3562,7 @@ Produced by David Widger
       Adister remarked.
     </p>
     <p>
-      'True,' said her sympathetic husband. ''Tis like reading the list of the
+      'True,' said her sympathetic husband. ' 'Tis like reading the list of the
       dead after a battle where you've not had the best of it&mdash;each name 's
       a startling new blow. I'd offer to run to Earlsfont, but here's my company
       you would have me join for the directoring of it, you know, my dear, to
@@ -3605,7 +3606,7 @@ Produced by David Widger
       welcome face there, and he might go, if you're for having it performed by
       word of mouth. But, trust me, my dear, bad news is best communicated by
       telegraph, which gives us no stupid articles and particles to quarrel
-      with. "Boy born Vienna doctor smiling nurse laughing." That tells it all,
+      with. &ldquo;Boy born Vienna doctor smiling nurse laughing.&rdquo; That tells it all,
       straight to the understanding, without any sickly circumlocutory stuff;
       and there's nothing more offensive to us when we're hurt at intelligence.
       For the same reason, Colonel Arthur couldn't go, since you'll want him to
@@ -3646,7 +3647,7 @@ Produced by David Widger
     <p>
       'I recommended the telegraph because it's my wife's own style, and comes
       better from wires,' said the captain, as they were putting on their
-      overcoats in the hall. 'You must know the family. "Deeds not words" would
+      overcoats in the hall. 'You must know the family. &ldquo;Deeds not words&rdquo; would
       serve for their motto. She hates writing, and doesn't much love talking.
       Pat 'll lengthen her sentences for her. She's fond of Adiante, and she
       sympathises with her brother Edward made a grandfather through the
@@ -3682,11 +3683,11 @@ Produced by David Widger
       far they mean going for a patriotic song.
     </p>
 <pre xml:space="preserve">
-       "For we march in ranks to the laurelled banks,
+       &ldquo;For we march in ranks to the laurelled banks,
         On the bright horizon shining,
         Though the fields between run red on the green,
-        And many a wife goes pining."
-</pre>
+        And many a wife goes pining.&rdquo;
+ </pre>
     <p>
       Will you come, Phil?'
     </p>
@@ -4511,8 +4512,8 @@ Produced by David Widger
       'But if the Lion, as they've whispered of late, Forbery, happens to be
       stuffed with straw or with what's worse, with sawdust, a fellow bearing a
       pointed horn at close quarters might do him mortal harm; and it must be a
-      situation trying to the patience of them both. The Lion seems to say "No
-      prancing!" as if he knew his peril; and the Unicorn to threaten a playful
+      situation trying to the patience of them both. The Lion seems to say &ldquo;No
+      prancing!&rdquo; as if he knew his peril; and the Unicorn to threaten a playful
       dig at his flank, as if he understood where he's ticklish.'
     </p>
     <p>
@@ -4751,7 +4752,7 @@ Produced by David Widger
       warrant it for the circulating medium of amity, if he'll try it.'
     </p>
     <p>
-      ''Tis the Comet Margaux,' said Dr. Forbery, topping anything Rockney might
+      ' 'Tis the Comet Margaux,' said Dr. Forbery, topping anything Rockney might
       have had to say, and anything would have served. The latter clasped the
       decanter, poured and drank in silence.
     </p>
@@ -7190,7 +7191,7 @@ Produced by David Widger
       'It's better not to think of him quite as a beast,' said Mr. Colesworth.
     </p>
     <p>
-      'Infinitely better: and I like your "guile," sir: But wait and tell me
+      'Infinitely better: and I like your &ldquo;guile,&rdquo; sir: But wait and tell me
       what you think of him after tossing him his meat for a certain number of
       years. There's Rockney. Do you know Rockney? He's the biggest single gun
       they've got, and he's mad for this country, but ask him about the public,
@@ -7389,7 +7390,7 @@ Produced by David Widger
       words.'
     </p>
     <p>
-      'I've tried, and can't persuade my tongue to do it "first off," as boys
+      'I've tried, and can't persuade my tongue to do it &ldquo;first off,&rdquo; as boys
       say, and my invalid has no brogue whatever to keep me in practice,' Jane
       replied. 'One wonders what he thinks of as he lies there by the window. He
       doesn't confide it to his hospital nurse.'
@@ -7564,8 +7565,8 @@ Produced by David Widger
       in leash; and they are tolerably alike. My spirits are up. Now the die is
       cast. My election to the vacancy must be reckoned beforehand. I promise
       you a sounding report from the Kincora Herald. They will not say of me
-      after that (and read only the speeches reported in the local paper) "what
-      is the man but an Irish adventurer!" He is a lover of his country, Philip
+      after that (and read only the speeches reported in the local paper) &ldquo;what
+      is the man but an Irish adventurer!&rdquo; He is a lover of his country, Philip
       O'Donnell, and one of millions, we will hope. And that stigmatic title of
       long standing, more than anything earthly, drove him to the step-to the
       ruin of his domestic felicity perhaps. But we are past sighing.
@@ -8004,7 +8005,7 @@ Produced by David Widger
       'Can you endure the noise?' she asked him.
     </p>
     <p>
-      'Con would say it shrieks "murder." But I used to like it once.'
+      'Con would say it shrieks &ldquo;murder.&rdquo; But I used to like it once.'
     </p>
     <p>
       Mrs. Lappett came answering to the call. Her children were seen up the
@@ -8372,8 +8373,8 @@ PLEASE READ THIS BEFORE YOU DISTRIBUTE OR USE THIS WORK
 
 To protect the Project Gutenberg-tm mission of promoting the free
 distribution of electronic works, by using or distributing this work
-(or any other work associated in any way with the phrase "Project
-Gutenberg"), you agree to comply with all the terms of the Full Project
+(or any other work associated in any way with the phrase &ldquo;Project
+Gutenberg&rdquo;), you agree to comply with all the terms of the Full Project
 Gutenberg-tm License (available with this file or online at
 http://gutenberg.net/license).
 
@@ -8392,7 +8393,7 @@ Gutenberg-tm electronic work and you do not agree to be bound by the
 terms of this agreement, you may obtain a refund from the person or
 entity to whom you paid the fee as set forth in paragraph 1.E.8.
 
-1.B.  "Project Gutenberg" is a registered trademark.  It may only be
+1.B.  &ldquo;Project Gutenberg&rdquo; is a registered trademark.  It may only be
 used on or associated in any way with an electronic work by people who
 agree to be bound by the terms of this agreement.  There are a few
 things that you can do with most Project Gutenberg-tm electronic works
@@ -8402,8 +8403,8 @@ Gutenberg-tm electronic works if you follow the terms of this agreement
 and help preserve free future access to Project Gutenberg-tm electronic
 works.  See paragraph 1.E below.
 
-1.C.  The Project Gutenberg Literary Archive Foundation ("the Foundation"
-or PGLAF), owns a compilation copyright in the collection of Project
+1.C.  The Project Gutenberg Literary Archive Foundation (&ldquo;the Foundation&rdquo;
+ or PGLAF), owns a compilation copyright in the collection of Project
 Gutenberg-tm electronic works.  Nearly all the individual works in the
 collection are in the public domain in the United States.  If an
 individual work is in the public domain in the United States and you are
@@ -8433,8 +8434,8 @@ States.
 1.E.1.  The following sentence, with active links to, or other immediate
 access to, the full Project Gutenberg-tm License must appear prominently
 whenever any copy of a Project Gutenberg-tm work (any work on which the
-phrase "Project Gutenberg" appears, or with which the phrase "Project
-Gutenberg" is associated) is accessed, displayed, performed, viewed,
+phrase &ldquo;Project Gutenberg&rdquo; appears, or with which the phrase &ldquo;Project
+Gutenberg&rdquo; is associated) is accessed, displayed, performed, viewed,
 copied or distributed:
 
 This eBook is for the use of anyone anywhere at no cost and with
@@ -8447,7 +8448,7 @@ from the public domain (does not contain a notice indicating that it is
 posted with permission of the copyright holder), the work can be copied
 and distributed to anyone in the United States without paying any fees
 or charges.  If you are redistributing or providing access to a work
-with the phrase "Project Gutenberg" associated with or appearing on the
+with the phrase &ldquo;Project Gutenberg&rdquo; associated with or appearing on the
 work, you must comply either with the requirements of paragraphs 1.E.1
 through 1.E.7 or obtain permission for the use of the work and the
 Project Gutenberg-tm trademark as set forth in paragraphs 1.E.8 or
@@ -8474,11 +8475,11 @@ Gutenberg-tm License.
 compressed, marked up, nonproprietary or proprietary form, including any
 word processing or hypertext form.  However, if you provide access to or
 distribute copies of a Project Gutenberg-tm work in a format other than
-"Plain Vanilla ASCII" or other format used in the official version
+&ldquo;Plain Vanilla ASCII&rdquo; or other format used in the official version
 posted on the official Project Gutenberg-tm web site (www.gutenberg.net),
 you must, at no additional cost, fee or expense to the user, provide a
 copy, a means of exporting a copy, or a means of obtaining a copy upon
-request, of the work in its original "Plain Vanilla ASCII" or other
+request, of the work in its original &ldquo;Plain Vanilla ASCII&rdquo; or other
 form.  Any alternate format must include the full Project Gutenberg-tm
 License as specified in paragraph 1.E.1.
 
@@ -8500,8 +8501,8 @@ that
      prepare (or are legally required to prepare) your periodic tax
      returns.  Royalty payments should be clearly marked as such and
      sent to the Project Gutenberg Literary Archive Foundation at the
-     address specified in Section 4, "Information about donations to
-     the Project Gutenberg Literary Archive Foundation."
+     address specified in Section 4, &ldquo;Information about donations to
+     the Project Gutenberg Literary Archive Foundation.&rdquo;
 
 - You provide a full refund of any money paid by a user who notifies
      you in writing (or by e-mail) within 30 days of receipt that s/he
@@ -8533,14 +8534,14 @@ effort to identify, do copyright research on, transcribe and proofread
 public domain works in creating the Project Gutenberg-tm
 collection.  Despite these efforts, Project Gutenberg-tm electronic
 works, and the medium on which they may be stored, may contain
-"Defects," such as, but not limited to, incomplete, inaccurate or
+&ldquo;Defects,&rdquo; such as, but not limited to, incomplete, inaccurate or
 corrupt data, transcription errors, a copyright or other intellectual
 property infringement, a defective or damaged disk or other medium, a
 computer virus, or computer codes that damage or cannot be read by
 your equipment.
 
-1.F.2.  LIMITED WARRANTY, DISCLAIMER OF DAMAGES - Except for the "Right
-of Replacement or Refund" described in paragraph 1.F.3, the Project
+1.F.2.  LIMITED WARRANTY, DISCLAIMER OF DAMAGES - Except for the &ldquo;Right
+of Replacement or Refund&rdquo; described in paragraph 1.F.3, the Project
 Gutenberg Literary Archive Foundation, the owner of the Project
 Gutenberg-tm trademark, and any other party distributing a Project
 Gutenberg-tm electronic work under this agreement, disclaim all
